--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,3 @@
-html,
-body{
-  height: 100%;
-  width: 100%;
-  font-family: helvetica, sans-serif;
-  margin: 0px;
-  padding: 0px;
-  background-color: lightgrey;
-}
-
-#container {
-  height: 100%;
-  position: relative;
-}
-
-.map-canvas{
-  width: 100%;
-  height: 100%;
-}
-
-.options{
-  position: absolute;
-  width: 450px;
-  height: 300px;
-  background-color: white;
-  z-index: 10;
-  text-align: center;
-}
-
-#show-places{
-  width: 45%;
-  text-align: center;
-}
-
-#hide-places{
-  width: 45%;
-  text-align: center;
+#map-canvas {
+	height: 100%;
 }
